# zig-on-camkes

./: CMakeLists.txt
CMake/: CMakeDetermineZIGCompiler.cmake  CMakeTestZIGCompiler.cmake  CMakeZIGCompiler.cmake.in  CMakeZIGInformation.cmake
components/main/src/: run.zig
